# happylittlestudent_PR1

./: ANSI-color-codes.h  CMakeLists.txt  README.md  calcoloPunteggio.c  calcoloPunteggio.h  caricamento.c  caricamento.h  effettoCarte.c  effettoCarte.h  exit codes.txt  giocate.c  giocate.h  main.c  mescolamazzi.c  mescolamazzi.h  preparazionegioco.c  preparazionegioco.h  salvataggi.c  salvataggi.h  stampeVarie.c  stampeVarie.h  utility.c  utility.h  vinciPerdi.c  vinciPerdi.h
